20170417-0.1.2(3): 1. 设置界面和对话框界面实现版本兼容至API 7 2. 解决部分机型APK安装失败的问题

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="MainActivityTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
+    <style name="SettingActivityTheme" parent="@style/Theme.AppCompat.Light">
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+    </style>
 
     <!-- alternative dialog theme -->
     <style
