20170515-0.2.0(6): 1. 新增安装信息展示功能 2. 安装位置自动排序已便于展示

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btn_start_setup"
+            android:onClick="onClick"
             android:text="@string/start_setup"
             android:textSize="@dimen/size_text_title_big"
             android:padding="@dimen/padding_mid"
@@ -46,6 +47,8 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/tv_setup_info"
+            android:onClick="onClick"
+            android:clickable="true"
             android:text="@string/setup_info"
             android:drawableTop="@drawable/ic_setup_info"
             android:textSize="@dimen/size_text_activity"
@@ -58,6 +61,8 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/tv_synchronization"
+            android:onClick="onClick"
+            android:clickable="true"
             android:text="@string/synchronization"
             android:drawableTop="@drawable/ic_synchronization"
             android:textSize="@dimen/size_text_activity"
@@ -70,6 +75,8 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/tv_setting"
+            android:onClick="onClick"
+            android:clickable="true"
             android:text="@string/setting"
             android:drawableTop="@drawable/ic_setting"
             android:textSize="@dimen/size_text_activity"
